--- a/src/components/TextChecker/TextCheckerEntry/style.module.css
+++ b/src/components/TextChecker/TextCheckerEntry/style.module.css
@@ -1,5 +1,5 @@
 .textarea {
-    margin-top: 1rem;
+    padding-top: 0.5rem;
 }
 
 @media (min-width: 1100px) {
