--- a/src/components/TextChecker/TextCheckerResult/style.module.css
+++ b/src/components/TextChecker/TextCheckerResult/style.module.css
@@ -56,6 +56,7 @@
 .tooltipDefinition {
     font-style: italic;
 }
+
 .textLabel {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
